Drop Down Fixed on small screens, Navbar alignments for small screens

--- a/resources/assets/sass/overrides/_dropdown.scss
+++ b/resources/assets/sass/overrides/_dropdown.scss
@@ -1,11 +1,24 @@
-.dropdown-menu {
-  > li {
-    > a {
-      color: $main-color;
-      &:hover, &:focus{
-        background-color: $main-color;
-        color: white;
+.navbar-default{
+  .navbar-nav {
+    .open .dropdown-menu{
+      position: absolute;
+      background: white;
+      border: 1px solid grey;
+      box-shadow: 0 6px 12px rgba(0, 0, 0, 0.175);
+      > li {
+       > a{
+          color: $main-color;
+          &:hover, &:focus{
+            background-color: $main-color;
+            color: white;
+          }
+        }
       }
     }
+  }
+}
+@media (max-width: 479px){
+  .navbar-default .navbar-nav .dropdown{
+    display: none;
   }
 }
